# iu9-ptp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.org  shell.nix
benchmarks/: CMakeLists.txt  main.cpp
include/stewkk/ptp/logic/: dot.hpp  input.hpp  monoid.hpp  strong_connectivity.hpp
include/stewkk/ptp/models/: dto.hpp  monoid.hpp  strong_connectivity.hpp  transformation.hpp
report/: biblio.bib  condensation.dot  condensation.tex  example_graph.dot  example_graph.tex  example_left_graph.dot  example_left_graph.tex  header.tex  report.tex
src/stewkk/db/: CMakeLists.txt  example_test.cpp  main.cpp
src/stewkk/ptp/: CMakeLists.txt  example_test.cpp  main.cpp
src/stewkk/ptp/logic/: dot.cpp  dot_test.cpp  input.cpp  input_test.cpp  monoid.cpp  monoid_test.cpp  strong_connectivity.cpp  strong_connectivity_test.cpp
test/: CMakeLists.txt  simple.dot
test/input/: basic.txt
